--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-shrink: 0;
   background-color: $menu-bar-color;
   padding: 0 10px 2px 10px;
 
