--- a/src/components/home/Project.scss
+++ b/src/components/home/Project.scss
@@ -23,7 +23,7 @@
   }
 
   .project-details {
-    flex: 1;
+    flex: 1 1 auto;
 
     @media screen and (max-width: 600px) {
       margin: 0 25px;
