--- a/src/components/resume/Education.scss
+++ b/src/components/resume/Education.scss
@@ -21,7 +21,7 @@
   }
 
   .education-details {
-    flex: 1;
+    flex: 1 1 auto;
     margin-left: 30px;
 
     @media screen and (max-width: 600px) {
