--- a/src/components/resume/Resume.scss
+++ b/src/components/resume/Resume.scss
@@ -1,12 +1,12 @@
 @import '../../styles/variables';
 
 .resume-page {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
+  flex: 1 0 auto;
 
   .page-content {
-    flex: 1;
+    flex: 1 0 auto;
     margin-bottom: 50px;
   }
 
