--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
 @import '~antd/dist/antd.css';
 
 body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   font-family: "Sarabun", Tahoma, Arial, Helvetica, sans-serif;
@@ -15,7 +19,10 @@ code {
 }
 
 #root {
-  height: 100%;
+  overflow: auto;
+  flex: 1 1 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .center {
